[package]
name = "totpx"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
base32 = "0.5.1"
chrono = { version = "0.4.41", features = ["serde"] }
env_logger = "0.11.8"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
totp-rs = "5.7.0"
uuid = { version = "1.17.0", features = ["v4"] }
