[package]
name = "totpx"
version = "0.1.0"
edition = "2024"

[dependencies]
async-graphql = "7.0"
async-graphql-axum = "7.0"
axum = "0.8.4"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
base32 = "0.5.1"
chrono = { version = "0.4.41", features = ["serde"] }
env_logger = "0.11.8"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
surrealdb = { version = "2.3.7", features = ["kv-mem"] }
thiserror = "2.0.12"
tokio = { version = "1.44.0", features = ["macros", "rt-multi-thread"] }
totp-rs = "5.7.0"
uuid = { version = "1.17.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
getrandom = "0.3.3"
